feat(api): minimal api created
